<resources>
    <string name="app_name">MADExperiments</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">Easwari Engineering College</string>
    <string name="nav_header_desc">Mobile Application Laboratory</string>
    <string name="action_settings">Settings</string>

    <string name="exp_1">Experiment 1</string>
    <string name="ex1_btn1_text">Change Font Colour</string>
    <string name="ex1_btn2_text">Change Font Size</string>
    <string name="ex1_btn3_text">Change Font Face</string>
    <string name="exp_2">Experiment 2</string>
    <string name="exp_3">Experiment 3</string>
    <string name="exp_4">Experiment 4</string>
    <string name="exp_5">Experiment 5</string>
    <string name="exp_6">Experiment 6</string>
    <string name="notify_exp">Notification Experiment</string>
    <string name="notify_button_exp">Notify Me</string>
    <string name="channel_name">Main Notifications</string>
    <string name="channel_description">Make a wish to disable this notification</string>
    <string name="exp_7">Experiment 7</string>
    <string name="UrlValue">Enter image URL</string>
    <string name="ImgButton">Show Image</string>
    <string-array name="department">
        <item>BE CSE</item>
        <item>BE IT</item>
        <item>BE MECH</item>
        <item>BE CIVIL</item>
        <item>BE AUTO</item>
        <item>BE EEE</item>
        <item>BE ECE</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="experiment_8">Experiment 8</string>
    <string name="show_location">Show Location</string>
    <string name="show_address">Show Address</string>
    <string name="message_body">Message Body</string>

</resources>
