<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_exp1"
            android:icon="@drawable/ic_label_outline_black_24dp"
            android:title="@string/exp_1" />
        <item
            android:id="@+id/nav_exp2"
            android:icon="@drawable/ic_label_outline_black_24dp"
            android:title="@string/exp_2" />
        <item
            android:id="@+id/nav_exp3"
            android:icon="@drawable/ic_label_outline_black_24dp"
            android:title="@string/exp_3" />
        <item
            android:id="@+id/nav_exp4"
            android:icon="@drawable/ic_label_outline_black_24dp"
            android:title="@string/exp_4" />
        <item
            android:id="@+id/nav_exp5"
            android:icon="@drawable/ic_label_outline_black_24dp"
            android:title="@string/exp_5" />
        <item
            android:id="@+id/nav_exp6"
            android:icon="@drawable/ic_label_outline_black_24dp"
            android:title="@string/exp_6" />
        <item
            android:id="@+id/nav_exp7"
            android:icon="@drawable/ic_label_outline_black_24dp"
            android:title="@string/exp_7" />
        <item
            android:id="@+id/nav_exp8"
            android:icon="@drawable/ic_label_outline_black_24dp"
            android:title="@string/experiment_8" />
        <item
            android:id="@+id/nav_exp9"
            android:icon="@drawable/ic_label_outline_black_24dp"
            android:title="Experiment 9" />
        <item
            android:id="@+id/nav_exp10"
            android:icon="@drawable/ic_label_outline_black_24dp"
            android:title="Experiment 10" />
        <item
            android:id="@+id/nav_exp11"
            android:icon="@drawable/ic_label_outline_black_24dp"
            android:title="Experiment 11" />

    </group>

<!--    <item android:title="Communicate">-->
<!--        <menu>-->
<!--            <item-->
<!--                android:id="@+id/nav_exp5-->
<!--                android:icon="@drawable/ic_menu_share"-->
<!--                android:title="@string/menu_share" />-->
<!--            <item-->
<!--                android:id="@+id/nav_exp6"-->
<!--                android:icon="@drawable/ic_menu_send"-->
<!--                android:title="@string/menu_send" />-->
<!--        </menu>-->
<!--    </item>-->

</menu>
