<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_exp1">

    <fragment
        android:id="@+id/nav_exp1"
        android:name="com.example.madexperiments.ui.experiment_1.ExperimentOne"
        android:label="@string/exp_1"
        tools:layout="@layout/experiment_1" />

    <fragment
        android:id="@+id/nav_exp2"
        android:name="com.example.madexperiments.ui.experiment_2.ExperimentTwo"
        android:label="@string/exp_2"
        tools:layout="@layout/experiment_2" />

    <fragment
        android:id="@+id/nav_exp3"
        android:name="com.example.madexperiments.ui.experiment_3.ExperimentThree"
        android:label="@string/exp_3"
        tools:layout="@layout/experiment_3" />

    <fragment
        android:id="@+id/nav_exp4"
        android:name="com.example.madexperiments.ui.experiment_4.ExperimentFour"
        android:label="@string/exp_4"
        tools:layout="@layout/experiment_4" />

    <fragment
        android:id="@+id/nav_exp5"
        android:name="com.example.madexperiments.ui.experiment_5.ExperimentFive"
        android:label="@string/exp_5"
        tools:layout="@layout/experiment_5" />

    <fragment
        android:id="@+id/nav_exp6"
        android:name="com.example.madexperiments.ui.experiment_6.ExperimentSix"
        android:label="@string/exp_6"
        tools:layout="@layout/experiment_6" />
    <fragment
        android:id="@+id/nav_exp7"
        android:name="com.example.madexperiments.ui.experiment_7.ExperimentSeven"
        android:label="@string/exp_7"
        tools:layout="@layout/experiment_7" />
    <fragment
        android:id="@+id/nav_exp8"
        android:name="com.example.madexperiments.ui.experiment_8.ExperimentEight"
        android:label="Experiment8"
        tools:layout="@layout/experiment_8" />
    <fragment
        android:id="@+id/nav_exp9"
        android:name="com.example.madexperiments.ui.experiment_9.ExperimentNine"
        android:label="Experiment9"
        tools:layout="@layout/experiment_9" />
    <fragment
        android:id="@+id/nav_exp10"
        android:name="com.example.madexperiments.ui.experiment_10.ExperimentTen"
        android:label="Experiment10"
        tools:layout="@layout/experiment_10" />
    <fragment
        android:id="@+id/nav_exp11"
        android:name="com.example.madexperiments.ui.experiment_11.ExperimentEleven"
        android:label="Experiment11"
        tools:layout="@layout/experiment_11" />
</navigation>